--- a/css/style.css
+++ b/css/style.css
@@ -20,3 +20,16 @@ h1{
     color: purple;
 }
 /* Main */
+.clearfix::after{
+    content:"";
+    display: table;
+    clear: both;
+}
+.columns{
+    background-color: lightblue;
+}
+.col{
+    width: calc(100% / 3);
+    float: left;
+    padding:0 15px;
+}
