--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,7 @@
 body{
     font-family: 'Fredoka', sans-serif;
     font-family: 'Fredoka One', cursive;
-    background-color: lightgrey;
-    width: 60%;
+    width: 65%;
     margin: auto;
     text-align: center;
 }
@@ -17,21 +16,26 @@ body{
 h1{
     padding-top: 30px;
     padding-bottom: 30px;
-    color: purple;
+    color: rgb(229, 49, 112);
 }
 /* Main */
+.main-text{
+    font-weight: 300;
+    font-size: small;
+    padding: 20px 0;
+}
 .clearfix::after{
     content:"";
     display: table;
     clear: both;
 }
-.columns{
-    background-color: lightblue;
-}
 .col{
     width: calc(100% / 3);
     float: left;
     padding:20px 15px;
+}
+.card{
+    background-color: black;
 }
 .card img{
     height: 90px;
@@ -41,4 +45,13 @@ h1{
     float: right;
     width: calc(100% - 100px) ;
     text-align: left;
+    color: white;
+}
+address{
+    font-style: normal;
+    color: rgb(110, 203, 242);
+}
+p{
+    font-family: sans-serif;
+    font-weight: 300;
 }
