--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ h1{
 }
 .card{
     background-color: black;
-    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+    box-shadow: 0px 0px 5px ;
 }
 .card img{
     height: 90px;
